--- a/index.html
+++ b/index.html
@@ -62,5 +62,15 @@
 
     <p class="note">Respon cepat. Rahasia terjamin.</p>
   </div>
+   <div class="container">
+    <h2>Berani Jin?</h2>
+    <p>Ada cara ghaib yang tidak semua orang tahu. Banyak yang berhasil membuat mantan kembali, memikat orang yang keras hati, bahkan membuka jalan rezeki lewat bantuan dunia tak kasat mata.</p>
+
+    <p>⚠️ Ini bukan main-main. Hanya untuk kamu yang serius dan siap menerima konsekuensi spiritualnya.</p>
+
+    <a class="cta-button" href="https://wa.me/6281234567890?text=Assalamu%27alaikum%2C+saya+siap+konsultasi+tentang+ritual+pemanggilan+jin." target="_blank">Chat Sekarang</a>
+
+    <p class="note">Respon cepat. Rahasia terjamin.</p>
+  </div>
 </body>
 </html>
