--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     .container {
       max-width: 500px;
       margin: auto;
+      text-align: left;
+font-family: Arial;
+font-size: 14px;
+font-style: normal;
+font-weight: normal;
+text-decoration: none;
+text-transform: none;
+color: #000000;
+background-color: #ffffff;
     }
     h1 {
       font-size: 32px;
