--- a/index.html
+++ b/index.html
@@ -16,15 +16,6 @@
     .container {
       max-width: 500px;
       margin: auto;
-      text-align: left;
-font-family: Arial;
-font-size: 14px;
-font-style: normal;
-font-weight: normal;
-text-decoration: none;
-text-transform: none;
-color: #000000;
-background-color: #ffffff;
     }
     h1 {
       font-size: 32px;
@@ -68,6 +59,8 @@ background-color: #ffffff;
     <p>⚠️ Ini bukan main-main. Hanya untuk kamu yang serius dan siap menerima konsekuensi spiritualnya.</p>
 
     <a class="cta-button" href="https://wa.me/6281234567890?text=Assalamu%27alaikum%2C+saya+siap+konsultasi+tentang+ritual+pemanggilan+jin." target="_blank">Chat Sekarang</a>
-   </div>
+
+    <p class="note">Respon cepat. Rahasia terjamin.</p>
+  </div>
 </body>
 </html>
